RTSDK-5096: Minor fix for JDK 1.8 build